--- a/app/src/main/res/layout/activity_customer__list.xml
+++ b/app/src/main/res/layout/activity_customer__list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".customer_List">
+    tools:context="com.oswal.stockmangmentnew.customer_List">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
