--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginModule.ForgetPassword">
+    tools:context="com.oswal.stockmangmentnew.LoginModule.ForgetPassword">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -22,7 +22,7 @@
         android:layout_alignParentLeft="true"
         android:layout_marginTop="225dp"
         android:layout_marginLeft="12dp"
-        android:text="Username/ID :"
+        android:text="Username :"
         android:textStyle="bold"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
