--- a/app/src/main/res/layout/activity_processor.xml
+++ b/app/src/main/res/layout/activity_processor.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ProductDetail.Processor">
+    tools:context="com.oswal.stockmangmentnew.ProductDetail.Processor">
 
     <LinearLayout
         android:layout_width="match_parent"
