--- a/app/src/main/res/layout/activity_stock_in.xml
+++ b/app/src/main/res/layout/activity_stock_in.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Services.StockIn.Stock_in">
+    tools:context="com.oswal.stockmangmentnew.Services.StockIn.Stock_in">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -58,7 +58,7 @@
                     android:text="Scan " />
             </TableRow>
 
-            <TableRow
+           <!-- <TableRow
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:paddingTop="13dp">
@@ -78,7 +78,7 @@
                     android:layout_marginLeft="1dp"
                     android:entries="@array/select"></Spinner>
 
-            </TableRow>
+            </TableRow>-->
 
 
 
@@ -333,7 +333,7 @@
             android:layout_width="90dp"
             android:layout_height="32dp"
             android:layout_marginLeft="110dp"
-            android:layout_marginTop="680dp"
+            android:layout_marginTop="600dp"
             android:onClick="openStockInPage"
             android:text="Open page"
             android:textSize="10dp" />
@@ -344,7 +344,7 @@
             android:layout_width="40dp"
             android:layout_height="30dp"
             android:layout_marginLeft="313dp"
-            android:layout_marginTop="680dp"
+            android:layout_marginTop="600dp"
             android:onClick="addStockIn"
             android:src="@drawable/plus_button" />
 
@@ -353,7 +353,7 @@
             android:layout_width="160dp"
             android:layout_height="45dp"
             android:layout_marginLeft="130dp"
-            android:layout_marginTop="730dp"
+            android:layout_marginTop="650dp"
             android:gravity="center"
             android:text="Submit" />
 
