--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="colorPrimaryDark">#0C0B0B</color>
     <color name="colorAccent">#C2AEAE</color>
 
+    <color name="contact_name">#333333</color>
+    <color name="contact_number">#8c8c8c</color>
+
 </resources>
