--- a/app/src/main/res/layout/activity_damage.xml
+++ b/app/src/main/res/layout/activity_damage.xml
@@ -35,9 +35,8 @@
             android:layout_width="100dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="130dp"
-
             android:layout_marginTop="90dp"
-
+            android:onClick="scanQR"
             android:gravity="center"
             android:id="@+id/damage_scan"
             android:text="Scan">
