--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item
+        android:id="@+id/refreshContact" android:icon="@mipmap/ic_refresh" app:showAsAction="always"   android:title="Refresh"/>
+    <item
+        android:id="@+id/homeActionmenu" android:icon="@mipmap/ic_home" app:showAsAction="always|withText" android:title="Home"/>
+
     <item
         android:id="@+id/action_settings1"
         android:orderInCategory="100"
